--- a/compose.yml
+++ b/compose.yml
@@ -1,22 +1,35 @@
 services:
-  # animalbot service - combines API and web interface
-  animalbot:
+  # API service
+  animalbot-api:
     build:
       context: .
-      dockerfile: chatbot/Dockerfile     
+      dockerfile: chatbot/Dockerfile.api     
     ports:
-      - "${API_PORT:-8001}:8000"  # FastAPI with default 8001
-      - "${UI_PORT:-8502}:8501"   # Streamlit with default 8502
+      - "${API_PORT:-8001}:8000"
     volumes:
       - "${DATA_DIR:-./data}:/app/data"
       - "./chatbot:/app"
     environment:
       - CHAT_AI_ACCESS_KEY=${CHAT_AI_ACCESS_KEY}
-      - API_BASE_URL=${API_BASE_URL:-http://localhost}
-    stdin_open: true
-    tty: true
+    restart: unless-stopped
+
+  # UI service
+  animalbot-ui:
+    build:
+      context: .
+      dockerfile: chatbot/Dockerfile.ui     
+    ports:
+      - "${UI_PORT:-8502}:8501"
+    volumes:
+      - "${DATA_DIR:-./data}:/app/data"
+      - "./chatbot:/app"
+    environment:
+      - API_BASE_URL=${API_BASE_URL:-http://animalbot-api:8001}
+      - API_PORT=${API_PORT:-8001}
+    depends_on:
+      - animalbot-api
     restart: unless-stopped
    
 networks:
   default:
-    driver: bridge
+    driver: host
